--- a/index.html
+++ b/index.html
@@ -7,10 +7,89 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 		<meta charset="UTF-8">
-		<title>Sportscar Application</title>
+		<title>Sportscar Application Home</title>
 	</head>
 	
 	<body>
+
+		<h1 class="greet"> Pick Your <br> Luxury Car </h1>
+		<h1 class="greet_big"> Pick Your Luxury Car </h1>
+
+		<div class="wrapper">
+			<div>
+				<a href="#">
+					<figure>
+						<img src="graphics/audi.png" alt="Audi Link">
+						<figcaption> Audi </figcaption>
+					</figure>
+				</a>
+			</div>
+
+			<div>
+				<a href="#">
+					<figure>
+						<img src="graphics/aston.png" alt="Aston Link" width="282" height="42">
+						<figcaption> Aston </figcaption>
+					</figure>
+				</a>
+			</div>
+
+			<div>
+				<a href="#">
+					<figure>
+						<img src="graphics/bmw.png" alt="BMW Link" width="282" height="42">
+						<figcaption> BMW </figcaption>
+					</figure>
+				</a>
+			</div>
+
+			<div>
+				<a href="#">
+					<figure>
+						<img src="graphics/ferrari.png" alt="Ferrari Link" width="282" height="42">
+						<figcaption> Ferrari </figcaption>
+					</figure>
+				</a>
+			</div>
+
+			<div>
+				<a href="#">
+					<figure>
+						<img src="graphics/lamb.png" alt="Lamb Link" width="282" height="42">
+						<figcaption> Lamborghini </figcaption>
+					</figure>
+				</a>
+			</div>
+
+			<div>
+				<a href="#">
+					<figure>
+						<img src="graphics/mercedes.png" alt="Mercedes Link" width="282" height="42">
+						<figcaption> Mercedes </figcaption>
+					</figure>
+				</a>
+			</div>
+
+			<div>
+				<a href="#">
+					<figure>
+						<img src="graphics/porsche.png" alt="Porsche Link" width="282" height="42">
+						<figcaption> Porsche </figcaption>
+					</figure>
+				</a>
+			</div>
+
+			<div>
+				<a href="#">
+					<figure>
+						<img src="graphics/tesla.png" alt="Tesla Link" width="282" height="42">
+						<figcaption> Tesla </figcaption>
+					</figure>
+				</a>
+			</div>
+
+		</div>
+
 		
 
 	</body>
