--- a/stats.html
+++ b/stats.html
@@ -38,10 +38,10 @@
 				<a href="company.html">Company</a>
 			</div>
 			<div>					
-				<a href="#">Videos</a>
+				<a href="videos.html">Videos</a>
 			</div>
 			<div>
-				<a href="#">Pictures</a>
+				<a href="pics.html">Pictures</a>
 			</div>
 			<div class="stats">
 				<a href="stats.html">Stats</a>
@@ -52,8 +52,8 @@
 		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		  <a href="index.html">Home</a>
 		  <a href="company.html">Company</a>
-		  <a href="#">Videos</a>
-		  <a href="#">Pictures</a>
+		  <a href="videos.html">Videos</a>
+		  <a href="pics.html">Pictures</a>
 		  <a href="stats.html">Stats</a>
 		</div>
 		
