--- a/html/pics.html
+++ b/html/pics.html
@@ -29,7 +29,7 @@
 						</div>
 					</a>
 				</div>
-				<img src="graphics/porsche-1-full.jpg" alt="Porsche Picture">
+				<img src="graphics/porsche_1.jpg" alt="Porsche Picture">
 			</div>
 		</div>
 
@@ -48,7 +48,7 @@
 						</div>
 					</a>
 				</div>
-				<img src="graphics/porsche-2-full.jpg" alt="Porsche Picture">
+				<img src="graphics/porsche_2.jpg" alt="Porsche Picture">
 			</div>
 		</div>
 
@@ -67,7 +67,7 @@
 						</div>
 					</a>
 				</div>
-				<img src="graphics/porsche-3-full.jpg" alt="Porsche Picture">
+				<img src="graphics/porsche_3.jpg" alt="Porsche Picture">
 			</div>
 		</div>
 
@@ -86,7 +86,7 @@
 						</div>
 					</a>
 				</div>
-				<img src="graphics/porsche-4-full.jpg" alt="Porsche Picture">
+				<img src="graphics/porsche_4.jpg" alt="Porsche Picture">
 			</div>
 		</div>
 
@@ -105,7 +105,7 @@
 						</div>
 					</a>
 				</div>
-				<img src="graphics/porsche-5-full.jpg" alt="Porsche Picture">
+				<img src="graphics/porsche_5.jpg" alt="Porsche Picture">
 			</div>
 		</div>
 
@@ -124,16 +124,9 @@
 						</div>
 					</a>
 				</div>
-				<img src="graphics/porsche-6-full.jpg" alt="Porsche Picture">
+				<img src="graphics/porsche_6.jpg" alt="Porsche Picture">
 			</div>
 		</div>
-
-
-
-
-
-
-
 
 
 
@@ -161,26 +154,26 @@
 				<a href="index.html"><i class="fa fa-home fa-2x"></i></a>
 			</div>
 			<div>
-				<a href="company.html">Company</a>
+				<a href="company.php">Company</a>
 			</div>
 			<div>					
-				<a href="videos.html">Videos</a>
+				<a href="videos.php">Videos</a>
 			</div>
 			<div>
-				<a href="pics.html">Pictures</a>
+				<a href="pics.php">Pictures</a>
 			</div>
 			<div class="stats">
-				<a href="stats.html">Stats</a>
+				<a href="stats.php">Stats</a>
 			</div>
 		</div>
 
 		<div id="mySidenav" class="sidenav">
 		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		  <a href="index.html">Home</a>
-		  <a href="company.html">Company</a>
-		  <a href="videos.html">Videos</a>
-		  <a href="pics.html">Pictures</a>
-		  <a href="stats.html">Stats</a>
+		  <a href="index.php">Home</a>
+		  <a href="company.php">Company</a>
+		  <a href="videos.php">Videos</a>
+		  <a href="pics.php">Pictures</a>
+		  <a href="stats.php">Stats</a>
 		</div>
 
 		<div class="hamb_wrap">
