--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="wrapper">
 			<div>
 				<a href="#">
-					<figure>
+					<figure class="shine">
 						<img src="graphics/audi.png" alt="Audi Link">
 						<figcaption> Audi </figcaption>
 					</figure>
@@ -27,16 +27,16 @@
 
 			<div>
 				<a href="#">
-					<figure>
+					<figure class="shine">
 						<img src="graphics/aston.png" alt="Aston Link" width="282" height="42">
-						<figcaption> Aston </figcaption>
+						<figcaption> Aston Martin </figcaption>
 					</figure>
 				</a>
 			</div>
 
 			<div>
 				<a href="#">
-					<figure>
+					<figure class="shine">
 						<img src="graphics/bmw.png" alt="BMW Link" width="282" height="42">
 						<figcaption> BMW </figcaption>
 					</figure>
@@ -45,7 +45,7 @@
 
 			<div>
 				<a href="#">
-					<figure>
+					<figure class="shine">
 						<img src="graphics/ferrari.png" alt="Ferrari Link" width="282" height="42">
 						<figcaption> Ferrari </figcaption>
 					</figure>
@@ -54,7 +54,7 @@
 
 			<div>
 				<a href="#">
-					<figure>
+					<figure class="shine">
 						<img src="graphics/lamb.png" alt="Lamb Link" width="282" height="42">
 						<figcaption> Lamborghini </figcaption>
 					</figure>
@@ -63,7 +63,7 @@
 
 			<div>
 				<a href="#">
-					<figure>
+					<figure class="shine">
 						<img src="graphics/mercedes.png" alt="Mercedes Link" width="282" height="42">
 						<figcaption> Mercedes </figcaption>
 					</figure>
@@ -71,8 +71,8 @@
 			</div>
 
 			<div>
-				<a href="brand.html">
-					<figure>
+				<a href="brand.php">
+					<figure class="shine">
 						<img src="graphics/porsche.png" alt="Porsche Link" width="282" height="42">
 						<figcaption> Porsche </figcaption>
 					</figure>
@@ -81,7 +81,7 @@
 
 			<div>
 				<a href="#">
-					<figure>
+					<figure class="shine">
 						<img src="graphics/tesla.png" alt="Tesla Link" width="282" height="42">
 						<figcaption> Tesla </figcaption>
 					</figure>
