--- a/html/videos.html
+++ b/html/videos.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html class="comp_bg" lang="en">
+php<!DOCTYPE html>
+<html lang="en">
 	<head>
 		<meta name="viewport"
 		content="initial-scale=1.0,
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<meta charset="UTF-8">
-		<title>Sportscar Company</title>
+		<title>Sportscar Videos</title>
 	</head>
 	
 	<body>
@@ -30,48 +30,47 @@
 			</div>
 		</div>
 
-		<div class="header_desktop_1">
+		<div class="header_desktop_2">
 			<div class="home">
 				<a href="index.html"><i class="fa fa-home fa-2x"></i></a>
 			</div>
 			<div>
-				<a href="company.html">Company</a>
+				<a href="company.php">Company</a>
 			</div>
 			<div>					
-				<a href="videos.html">Videos</a>
+				<a href="videos.php">Videos</a>
 			</div>
 			<div>
-				<a href="pics.html">Pictures</a>
+				<a href="pics.php">Pictures</a>
 			</div>
 			<div class="stats">
-				<a href="stats.html">Stats</a>
+				<a href="stats.php">Stats</a>
 			</div>
 		</div>
 
 		<div id="mySidenav" class="sidenav">
 		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		  <a href="index.html">Home</a>
-		  <a href="company.html">Company</a>
-		  <a href="videos.html">Videos</a>
-		  <a href="pics.html">Pictures</a>
-		  <a href="stats.html">Stats</a>
-		</div>
-
-		<div class="white_contain">
-			<div class="white_box">
-				<p>	Shaping the future of the sportscar this is the theme of Strategy 2025. At the heart of the strategy is our future product portfolio. The sportscar of the future will blend the history and values of the Porsche brand with innovative technologies, while at the same time ensuring sustainability. In achieving this, topics such as electromobility, digitalisation and connectivity will play an important role. Embracing these topics will allow us to shape the exclusive and sporty mobility of tomorrow. Nevertheless, with all the innovations and modifications in front of us, one thing remains constant: Anything that carries the Porsche crest will also feature the excellent quality that is synonymous with Porsche.</p>
-			</div>
+		  <a href="company.php">Company</a>
+		  <a href="videos.php">Videos</a>
+		  <a href="pics.php">Pictures</a>
+		  <a href="stats.php">Stats</a>
 		</div>
 
 		<div class="hamb_wrap">
 			<span class="hamburger" onclick="openNav()">&#9776;</span>
 		</div>
 
-		<div class="website">
-			<div class="contain_web">
-				<h5>Website</h5>
+		<div class="contain_vid">
+			<div>
+				<iframe src="https://www.youtube.com/embed/kFKMPTIa3OI?ecver=2"></iframe>
+			</div>
+			<div>
+				<iframe src="https://www.youtube.com/embed/tD5iy5Zrg7o?ecver=2"></iframe>
 			</div>
 		</div>
+
+
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
