--- a/html/videos.html
+++ b/html/videos.html
@@ -1,77 +1,71 @@
-php<!DOCTYPE html>
+php
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta name="viewport"
-		content="initial-scale=1.0,
-		width=device-width"/>
-		<link rel="stylesheet" type="text/css" href="css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<meta charset="UTF-8">
-		<title>Sportscar Videos</title>
-	</head>
-	
-	<body>
-		
-		<div class="header_2">
-			<div class="title">
-				<h1 class="brand_title_2">Porsche</h1>
-			</div>
-			<div class="left_nav_2">
-				<a href="#">
-					<i class="fa fa-arrow-circle-left fa-3x"></i>
-				</a>
-			</div>
-			<div class="right_nav_2">
-				<a href="#">
-					<i class="fa fa-arrow-circle-right fa-3x"></i>
-				</a>
-			</div>
-		</div>
 
-		<div class="header_desktop_2">
-			<div class="home">
-				<a href="index.html"><i class="fa fa-home fa-2x"></i></a>
-			</div>
-			<div>
-				<a href="company.php">Company</a>
-			</div>
-			<div>					
-				<a href="videos.php">Videos</a>
-			</div>
-			<div>
-				<a href="pics.php">Pictures</a>
-			</div>
-			<div class="stats">
-				<a href="stats.php">Stats</a>
-			</div>
-		</div>
+<head>
+    <meta name="viewport" content="initial-scale=1.0,
+		width=device-width" />
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Sportscar Videos</title>
+</head>
 
-		<div id="mySidenav" class="sidenav">
-		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		  <a href="index.html">Home</a>
-		  <a href="company.php">Company</a>
-		  <a href="videos.php">Videos</a>
-		  <a href="pics.php">Pictures</a>
-		  <a href="stats.php">Stats</a>
-		</div>
+<body>
+    <div class="header_2">
+        <div class="title">
+            <h1 class="brand_title_2">Porsche</h1>
+        </div>
+        <div class="left_nav_2">
+            <a href="#">
+                <i class="fa fa-arrow-circle-left fa-3x"></i>
+            </a>
+        </div>
+        <div class="right_nav_2">
+            <a href="#">
+                <i class="fa fa-arrow-circle-right fa-3x"></i>
+            </a>
+        </div>
+    </div>
+    <div class="header_desktop_2">
+        <div class="home">
+            <a href="index.html"><i class="fa fa-home fa-2x"></i></a>
+        </div>
+        <div>
+            <a href="company.php">Company</a>
+        </div>
+        <div>
+            <a href="videos.php">Videos</a>
+        </div>
+        <div>
+            <a href="pics.php">Pictures</a>
+        </div>
+        <div class="stats">
+            <a href="stats.php">Stats</a>
+        </div>
+    </div>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">Home</a>
+        <a href="company.php">Company</a>
+        <a href="videos.php">Videos</a>
+        <a href="pics.php">Pictures</a>
+        <a href="stats.php">Stats</a>
+    </div>
+    <div class="hamb_wrap">
+        <span class="hamburger" onclick="openNav()">&#9776;</span>
+    </div>
+    <div class="contain_vid">
+        <div>
+            <iframe src="https://www.youtube.com/embed/kFKMPTIa3OI?ecver=2"></iframe>
+        </div>
+        <div>
+            <iframe src="https://www.youtube.com/embed/tD5iy5Zrg7o?ecver=2"></iframe>
+        </div>
+    </div>
+    <script type="text/javascript" src="js/main.js"></script>
+</body>
 
-		<div class="hamb_wrap">
-			<span class="hamburger" onclick="openNav()">&#9776;</span>
-		</div>
-
-		<div class="contain_vid">
-			<div>
-				<iframe src="https://www.youtube.com/embed/kFKMPTIa3OI?ecver=2"></iframe>
-			</div>
-			<div>
-				<iframe src="https://www.youtube.com/embed/tD5iy5Zrg7o?ecver=2"></iframe>
-			</div>
-		</div>
-
-
-
-		<script type="text/javascript" src="js/main.js"></script>
-	</body>
 </html>
